<resources>
    <string name="app_name">QuickR Mobile</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="the_quickr_logo">The QuickR Logo</string>
    <string name="login_string">Log in</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="student_attendance_monitoring_system">Student Attendance Monitoring System</string>
    <string name="_18008890_version_1_1">18008890, Version: 1.1</string>
    <string name="student_id_hint"><font size="11"><font color="#592B2421">Enter your University of Worcester student ID number</font></font></string>
</resources>